Added more functionalities.